--- a/subtrees/github-test-b/.github/workflows/update-github-test-a.yml
+++ b/subtrees/github-test-b/.github/workflows/update-github-test-a.yml
@@ -2,6 +2,8 @@ name: Update github-test-a
 
 on:
   push:
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
@@ -11,28 +13,16 @@ jobs:
       - uses: actions/checkout@v3
         with:
           repository: 'adavis444/github-test-a'
-          submodules: 'recursive'
           token: ${{ secrets.PAT }}
       - uses: actions/checkout@v3
         with:
           path: 'subtrees/github-test-b'
-      - name: Info
-        run: |
-          echo branch:
-          echo ${{ github.head_ref }}
-          echo HOME = $HOME
-          echo pwd = $PWD
-          echo ls:
-          ls
-          echo git remotes:
-          git remote get-url --all origin
-      - name: Update submodules
-        run: git submodule update --init --recursive
-      - uses: stefanzweifel/git-auto-commit-action@v4
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v4
         with:
-          add_options: '--all'
-      - name: Update subtrees
-        run: git subtree pull --prefix subtrees/github-test-b git@github.com:adavis444/github-test-b main
-      - uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          add_options: '--all'
+          token: ${{ secrets.PAT }}
+          commit-message: |
+            Subtree update from ${{ github.repository }}@${{ github.sha }}
+
+            [create-pull-request] automated change
+          delete-branch: true
